--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1> Hello World!!! </h1>
+<?xml version="1.0" encoding="utf-8"?>
+<rss version="2.0">
+  <channel>
+    <title>Web App Updates</title>
+    <item>
+      <title>Version 2.0.0</title>
+      <description>Very Major update with new features.</description>
+      <enclosure url="https://staging.earmark.app/" length="0" type="text/html"/>
+      <versionCode>2</versionCode>
+      <versionName>2.0.0</versionName>
+    </item>
+  </channel>
+</rss>
